Add a library "Retrofit2".

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    /* Roughike - Bottom bar */
     implementation 'com.roughike:bottom-bar:2.3.1'
 
+    /* Butter Knife */
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    /* Retrofit2 */
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 }
