--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
 
     /* TedPermission */
     implementation 'gun0912.ted:tedpermission:2.1.1'
+
+    /* Glide */
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
