--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -45,4 +49,16 @@ dependencies {
     /* Glide */
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    /* ongakuer/CircleIndicator */
+    implementation 'me.relex:circleindicator:1.2.2@aar'
+
+    /* Text Filed Boxes */
+    implementation 'com.github.HITGIF:TextFieldBoxes:1.4.4'
+
+    /* Submit Button */
+    implementation 'com.unstoppable:submitbutton:1.1.3'
+
+    /* JSR305 - Find bug */
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 }
