--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,13 @@ dependencies {
 
     /* JSR305 - Find bug */
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
+    /* Spin Kit */
+    implementation 'com.github.ybq:Android-SpinKit:1.1.0'
+
+    /* Radio Real Button */
+    implementation 'com.github.ceryle:RadioRealButton:v2.1.1'
+
+    /* View Pager Transforms */
+    implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
 }
