--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
     /* TedPermission */
     implementation 'gun0912.ted:tedpermission:2.1.1'
@@ -74,4 +75,14 @@ dependencies {
 
     /* Material Calendar View */
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
+
+    /* Text Field Boxes */
+    implementation 'com.github.HITGIF:TextFieldBoxes:1.4.4'
+
+    /* RxJava2 */
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+
+    /* Toggle Button */
+    implementation 'com.zcw:togglebutton-library:1.0.0'
 }
