--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     /* Glide */
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'jp.wasabeef:glide-transformations:3.3.0'
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
 
     /* ongakuer/CircleIndicator */
     implementation 'me.relex:circleindicator:1.2.2@aar'
