--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,8 +88,9 @@ dependencies {
     /* Jsoup */
     implementation 'org.jsoup:jsoup:1.11.3'
 
-    /* Firebase Cloud Messaging */
+    /* Firebase */
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.firebase:firebase-core:16.0.5'
 
     /* Otto */
     implementation 'com.squareup:otto:1.3.8'
