Added an activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity
             android:name=".ui.main.setting.profile.ProfileActivity"
             android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".ui.main.setting.notice.NoticeActivity"/>
 
         <service
             android:name=".data.remote.MyFirebaseMessagingService"
