--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
@@ -94,5 +95,11 @@ dependencies {
 
     /* Otto */
     implementation 'com.squareup:otto:1.3.8'
+
+    /* RxImagePicker */
+    implementation 'com.github.qingmei2:rximagepicker_support_zhihu:2.2.0'
+
+    /* Crashlytics */
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
 }
 apply plugin: 'com.google.gms.google-services'
