--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,8 +90,8 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.11.3'
 
     /* Firebase */
-    implementation 'com.google.firebase:firebase-messaging:17.3.4'
-    implementation 'com.google.firebase:firebase-core:16.0.5'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
 
     /* Otto */
     implementation 'com.squareup:otto:1.3.8'
@@ -104,5 +104,8 @@ dependencies {
 
     /* Lottie */
     implementation 'com.airbnb.android:lottie:2.7.0'
+
+    /* Admob */
+    implementation 'com.google.android.gms:play-services-ads:17.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
