--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "dev.kxxcn.app_with"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 45
-        versionName "5.1.0"
+        versionCode 46
+        versionName "5.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -204,8 +204,19 @@ dependencies {
      */
     implementation 'com.ethanhua:skeleton:1.1.2'
     implementation 'io.supercharge:shimmerlayout:2.1.0'
+
+    /**
+     * Circle Progress View
+     */
+    implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
+
+    /**
+     * MPAndroidChart
+     */
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
