--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
             android:windowSoftInputMode="adjustResize" />
 
         <service
-            android:name=".data.remote.MyFirebaseMessagingService"
+            android:name=".data.remote.MessagingService"
             tools:ignore="ExportedService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
