--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,10 @@
             android:name=".ui.main.decimal.AddDecimalActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".ui.main.WrapFragmentActivity" />
+        <activity
+            android:name=".ui.main.WrapFragmentActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
 
         <service
             android:name=".data.remote.MessagingService"
