일기 자세히 보기 화면 수정
- 레이아웃 변경
- 애니메이션 적용
- 사진 줌 인/아웃 기능 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -219,6 +219,11 @@ dependencies {
      * Progress Wheel View
      */
     implementation 'com.zekapp.library:progreswheelview:1.1.5'
+
+    /**
+     * PhotoView
+     */
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
 repositories {
